--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "alexa-sdk": "^1.0.12",
     "base-64": "^0.1.0",
+    "didyoumean": "^1.2.1",
     "lodash": "^4.17.4",
     "node-fetch": "^1.7.3"
   }
