--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -19,5 +19,13 @@
     "didyoumean": "^1.2.1",
     "lodash": "^4.17.4",
     "node-fetch": "^1.7.3"
+  },
+  "devDependencies": {
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
